Subidad de version Sobre mi 5

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -15,7 +15,7 @@
 
     <p>
       Algunos de mis éxitos incluyen <strong
-        >colaborar con OFSAA para el desarrollo de los metodos  en su
+        >colaborar con OFSAA para el desarrollo de los metodos en su
         sistema KYC.</strong
       >. Aunque ahora estoy buscando nuevos proyectos.
     </p>
@@ -27,7 +27,7 @@
         Software de hoja de cálculo,
         Resolución de problemas,
         Infraestructuras básicas en Red,
-        Pruebas y depuración de software. <em class="italic">Software & Game Development</em> en Twitch</strong
+        Pruebas y depuración de software.</strong
       >. Mi objetivo es mejorar en todos los conocimiento adquiridos en la actualidad.
     </p>
   </div>
